correction concernant les points de penalités

--- a/LCBA.ipynb
+++ b/LCBA.ipynb
@@ -566,50 +566,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f080323f",
-   "metadata": {},
-   "source": [
-    "### Correction des points\n",
-    "Ce code effectue les opérations suivantes :\n",
-    "\n",
-    "1. Il met à jour les valeurs de la colonne 'blue_point' à 0 pour les lignes où la colonne 'red_penalty' est différente de 0. Cela signifie que si la valeur de 'red_penalty' est différente de 0, la valeur de 'blue_point' sera mise à 0 pour cette ligne.\n",
-    "\n",
-    "2. Il met à jour les valeurs de la colonne 'red_point' à 0 pour les lignes où la colonne 'blue_penalty' est différente de 0. Cela signifie que si la valeur de 'blue_penalty' est différente de 0, la valeur de 'red_point' sera mise à 0 pour cette ligne.\n",
-    "\n",
-    "3. Il compte le nombre de lignes modifiées en comptant le nombre de lignes où soit la colonne 'red_penalty' est différente de 0, soit la colonne 'blue_penalty' est différente de 0. Cela compte le nombre de lignes où au moins l'une des colonnes de pénalité a une valeur différente de 0.\n",
-    "\n",
-    "4. Enfin, il affiche le nombre de lignes modifiées.\n",
-    "\n",
-    "En résumé, ce code met à jour les valeurs des colonnes 'blue_point' et 'red_point' en fonction des valeurs des colonnes de pénalité ('red_penalty' et 'blue_penalty'). Il compte ensuite le nombre de lignes modifiées et l'affiche."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4691a3ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre de lignes modifiées : 7805\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Mettre à jour les lignes avec des pénalités\n",
-    "data.loc[data['red_penalty'] != 0, 'blue_point'] = 0\n",
-    "data.loc[data['blue_penalty'] != 0, 'red_point'] = 0\n",
-    "\n",
-    "# Compter le nombre de lignes modifiées\n",
-    "num_modified_rows = sum((data['red_penalty'] != 0) | (data['blue_penalty'] != 0))\n",
-    "\n",
-    "print(\"Nombre de lignes modifiées :\", num_modified_rows)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f80580ca",
    "metadata": {},
    "source": [
@@ -627,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "e9e80b25",
    "metadata": {},
    "outputs": [
@@ -635,8 +591,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de lignes avec red_point négatif : 352\n",
-      "Nombre de lignes avec blue_point négatif : 415\n"
+      "Nombre de lignes avec red_point négatif : 504\n",
+      "Nombre de lignes avec blue_point négatif : 545\n"
      ]
     }
    ],
@@ -659,8 +615,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "bfb686a6",
+   "execution_count": 19,
+   "id": "0d00072e",
    "metadata": {},
    "outputs": [
     {
@@ -679,14 +635,20 @@
     "num_deleted_rows = 0\n",
     "\n",
     "for index, row in data.iterrows():\n",
-    "    if row['red_point'] < 0 or row['blue_point'] < 0:\n",
-    "        judge_id = row['judge_id']\n",
-    "        match_id = row['match_id']\n",
-    "        current_timestamp = row['date_create_app']\n",
+    "    red_point = row['red_point']\n",
+    "    blue_point = row['blue_point']\n",
+    "    red_penalty = row['red_penalty']\n",
+    "    blue_penalty = row['blue_penalty']\n",
+    "    judge_id = row['judge_id']\n",
+    "    match_id = row['match_id']\n",
+    "    current_timestamp = row['date_create_app']\n",
     "\n",
+    "    # Vérifier si une seule colonne contient une valeur négative\n",
+    "    if ((red_point < 0) ^ (blue_point < 0)) and (red_penalty == 0) and (blue_penalty == 0):\n",
+    "        \n",
     "        # Rechercher les lignes avec le même judge_id et match_id\n",
     "        same_judge_id_rows = data[(data['judge_id'] == judge_id) & (data['match_id'] == match_id)]\n",
-    "\n",
+    "        \n",
     "        if len(same_judge_id_rows) > 1:\n",
     "            # Calculer la différence de temps avec chaque ligne\n",
     "            time_diff = abs(same_judge_id_rows['date_create_app'] - current_timestamp)\n",
@@ -715,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "81b4e599",
    "metadata": {},
    "outputs": [
@@ -724,16 +686,16 @@
      "output_type": "stream",
      "text": [
       "     match_id  red_point  blue_point\n",
-      "0       21089         20          15\n",
-      "1       21092          9          22\n",
-      "2       21093         19          32\n",
-      "3       21095         31          25\n",
-      "4       21096         35          27\n",
+      "0       21089         29          27\n",
+      "1       21092         12          25\n",
+      "2       21093         21          32\n",
+      "3       21095         31          37\n",
+      "4       21096         35          33\n",
       "..        ...        ...         ...\n",
-      "803     22511          8          23\n",
-      "804     22512          4          10\n",
-      "805     22513         40          23\n",
-      "806     22514         22          26\n",
+      "803     22511         11          26\n",
+      "804     22512         10          10\n",
+      "805     22513         40          26\n",
+      "806     22514         34          35\n",
       "807     22515         25          25\n",
       "\n",
       "[808 rows x 3 columns]\n"
@@ -791,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "c4849232",
    "metadata": {},
    "outputs": [
@@ -907,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "98ce538c",
    "metadata": {},
    "outputs": [
@@ -1007,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "810b38f9",
    "metadata": {
     "scrolled": false
@@ -1058,17 +1020,17 @@
       "38782    115226     22514 2023-04-15 14:19:01.423000+00:00  ...   \n",
       "\n",
       "      PalmaresRealStartTime  PalmaresRingID  blue_injured           open_time  \\\n",
-      "5       2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "6       2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "7       2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "8       2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "9       2023-06-19 11:14:36             2.0         False 2023-06-19 11:12:37   \n",
+      "5       2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "6       2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "7       2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "8       2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "9       2023-06-21 11:14:36             2.0         False 2023-06-21 11:12:37   \n",
       "...                     ...             ...           ...                 ...   \n",
-      "38778   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38779   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38780   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38781   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38782   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
+      "38778   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38779   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38780   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38781   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38782   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
       "\n",
       "      red_injured  blue_height  red_height  round  outlier  phase  \n",
       "5           False          182         179      1      NaN      1  \n",
@@ -1087,17 +1049,17 @@
       "----------------------------------------------------------\n",
       "Dataset filtré:\n",
       "       score_id  red_penalty  red_point  blue_penalty  blue_point  \\\n",
-      "10           11            1          0             0           0   \n",
-      "11           12            1          0             0           0   \n",
-      "12           13            1          0             0           0   \n",
-      "37           38            1          0             0           0   \n",
-      "38           39            1          0             0           0   \n",
+      "10           11            1          0             0           1   \n",
+      "11           12            1          0             0           1   \n",
+      "12           13            1          0             0           1   \n",
+      "37           38            1          0             0           1   \n",
+      "38           39            1          0             0           1   \n",
       "...         ...          ...        ...           ...         ...   \n",
-      "38770     38944            0          0             1           0   \n",
-      "38771     38945            0          0             1           0   \n",
-      "38772     38946            1          0             0           0   \n",
-      "38773     38947            1          0             0           0   \n",
-      "38774     38948            1          0             0           0   \n",
+      "38770     38944            0          1             1           0   \n",
+      "38771     38945            0          1             1           0   \n",
+      "38772     38946            1          0             0           1   \n",
+      "38773     38947            1          0             0           1   \n",
+      "38774     38948            1          0             0           1   \n",
       "\n",
       "                           date_create                      date_change  \\\n",
       "10    2021-06-26 11:14:57.512104+00:00 2021-06-26 11:14:57.512115+00:00   \n",
@@ -1126,17 +1088,17 @@
       "38774    114926     22514 2023-04-15 14:18:22.918000+00:00  ...   \n",
       "\n",
       "      PalmaresRealStartTime  PalmaresRingID  blue_injured           open_time  \\\n",
-      "10      2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "11      2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "12      2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "37      2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
-      "38      2023-06-19 11:12:45             1.0         False 2023-06-19 11:12:01   \n",
+      "10      2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "11      2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "12      2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "37      2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
+      "38      2023-06-21 11:12:45             1.0         False 2023-06-21 11:12:01   \n",
       "...                     ...             ...           ...                 ...   \n",
-      "38770   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38771   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38772   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38773   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
-      "38774   2023-06-19 14:13:13            99.0         False 2023-06-19 14:12:41   \n",
+      "38770   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38771   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38772   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38773   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
+      "38774   2023-06-21 14:13:13            99.0         False 2023-06-21 14:12:41   \n",
       "\n",
       "      red_injured  blue_height  red_height  round  outlier  phase  \n",
       "10          False          182         179      1      NaN      1  \n",
@@ -1151,7 +1113,7 @@
       "38773       False          142         138      3      NaN      1  \n",
       "38774       False          142         138      3      NaN      1  \n",
       "\n",
-      "[7358 rows x 40 columns]\n"
+      "[7634 rows x 40 columns]\n"
      ]
     }
    ],
@@ -1224,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "cecdd8a6",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "4cdb64a1",
    "metadata": {},
    "outputs": [
@@ -1400,7 +1362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_14836\\3695256590.py:2: DtypeWarning: Columns (40,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_11808\\3695256590.py:2: DtypeWarning: Columns (40,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_resultat = pd.read_csv('resultat.csv')\n"
      ]
     },
