Last commit structure

--- a/LCBA.ipynb
+++ b/LCBA.ipynb
@@ -10,10 +10,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "279f31e4",
+   "metadata": {},
+   "source": [
+    "# Business understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af6b238",
+   "metadata": {},
+   "source": [
+    "Le contexte de ce notebook porte sur le sport de combat du light-contact boxing et plus précisément plus l’application mise à disposition à la fédération suisse de boxe light-contact (LCBA). Il traite la manière dans laquelle les juges sont chargés d'attribuer des points en fonction de leur appréciation des échanges portés par les boxeurs. Il est constaté que les juges peuvent avoir des différences d’attribution de points importantes, et pourtant ils se basent sur les mêmes règles et critères. Cette situation permet de constater les erreurs de jugement et donne une impression d'injustice pour les boxeurs, ce qui peut nuire au fair-play dans le sport.\n",
+    "\n",
+    "Pour remédier à cette situation, ce notebook propose l'utilisation de techniques d'analyse des données en utilisant des algorithmes appuyés de méthodes statistiques pour faciliter la détection des écarts de pointage en temps réel. Le résultat permettrait d’améliorer le jugement d’un match, et peut-être identifier les critères pour lesquels ils ont tendance à diverger dans leur jugement. Pour les juges, cela permettra d’améliorer leur compréhension des règles et des critères de jugement, ce qui aura un impact positif sur la qualité du jugement et le fair-play dans le sport de combat. Un document expliquant les enjeux et la réalisation de ce projet de recherche a été rédigé."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1265e502",
+   "metadata": {},
+   "source": [
+    "# Data exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cccbdea",
    "metadata": {},
    "source": [
-    "# Import\n",
+    "## Import\n",
     "\n",
     "Le code effectue l'importation de différentes bibliothèques et modules Python nécessaires à l'analyse de données et à la visualisation. Voici une description synthétique de chaque import :\n",
     "\n",
@@ -50,14 +76,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from fastdtw import fastdtw\n",
     "from scipy.spatial.distance import euclidean"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ac59229",
-   "metadata": {},
-   "source": [
-    "# Exploration"
    ]
   },
   {
@@ -554,7 +572,7 @@
    "id": "b8013ee6",
    "metadata": {},
    "source": [
-    "# Preparation"
+    "# Data preparation"
    ]
   },
   {
@@ -1228,7 +1246,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f4dce0",
+   "id": "91f88f05",
+   "metadata": {},
+   "source": [
+    "# Evaluation\n",
+    "\n",
+    "Cette phase d'itération dans la réalisation du projet a permis d'évaluer les résultats obtenus, de les analyser et de les comparer aux objectifs initiaux. Elle offre l'opportunité de faire des ajustements, des améliorations et des corrections en fonction des constatations faites. L'itération a impliquer la révision et la modification de l'algorithme pour ajuster et améliorer les résultats obtenus."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f933f04",
+   "metadata": {},
+   "source": [
+    "# Deployment\n",
+    "\n",
+    "Cette phase d'export des résultats obtenus est la fin du projet de recherche ou d'analyse. Elle présente le résultat, les conclusions et les découvertest. Cela contribue à la valorisation du travail réalisé et permet à d'autres personnes de bénéficier du résultat des recherches effectuées."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416f34cf",
    "metadata": {},
    "source": [
     "Ce code compare les \"score_id\" entre deux fichiers CSV et ajoute les lignes correspondantes manquantes. Le DataFrame mis à jour est ensuite exporté dans un nouveau fichier CSV appelé \"resultat_final.csv\". Cette phase est pour récupérer toutes les lignes supprimées."
@@ -1237,14 +1275,14 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4cdb64a1",
+   "id": "f2a8d3ec",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_4748\\3747264973.py:1: DtypeWarning: Columns (43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_12092\\1080245128.py:1: DtypeWarning: Columns (43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_resultat = pd.read_csv('resultat.csv')\n"
      ]
     },
@@ -1252,7 +1290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les lignes des score_id manquants ont été ajoutées dans resultat_final.csv.\n"
+      "Les lignes des score_id manquants ont été ajoutées dans LCBA_resultat.csv.\n"
      ]
     }
    ],
@@ -1275,39 +1313,37 @@
     "\n",
     "    # Exporter le DataFrame résultat avec les lignes manquantes dans un nouveau fichier CSV\n",
     "    df_resultat.to_csv('LCBA_resultat.csv', index=False)\n",
-    "    print(\"Les lignes des score_id manquants ont été ajoutées dans resultat_final.csv.\")\n",
+    "    print(\"Les lignes des score_id manquants ont été ajoutées dans LCBA_resultat.csv.\")\n",
     "else:\n",
     "    print(\"Tous les score_id de LCBA_scores se trouvent déjà dans resultat.\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91f88f05",
+   "id": "99438755",
    "metadata": {},
    "source": [
-    "# Evaluation\n",
-    "\n",
     "Ce code caclul les éléments suivants :\n",
     "\n",
-    "- `outliers_count = df_resultat.groupby('match_id')['outlier'].sum()` : Calcule le nombre d'outlier pour chaque \"match_id\".\n",
-    "- `outliers_percentage = (outliers_count / total_rows_per_match_id) * 100` : Calcule le pourcentage d'outliers pour chaque \"match_id\".\n",
-    "- `outliers_df = pd.DataFrame({'Match_id': outliers_count.index, 'Nombre d\\'anomalies': outliers_count, 'Pourcentage d\\'outliers': outliers_percentage})` : Crée un DataFrame appelé `outliers_df` pour stocker les résultats des outliers, contenant les colonnes \"Match_id\", \"Nombre d'anomalies\" et \"Pourcentage d'outliers\".\n",
+    "- `outliers_count` : Calcule le nombre d'outlier pour chaque \"match_id\".\n",
+    "- `outliers_percentage` : Calcule le pourcentage d'outliers pour chaque \"match_id\".\n",
+    "- `outliers_df` : Crée un DataFrame appelé `outliers_df` pour stocker les résultats des outliers, contenant les colonnes \"Match_id\", \"Nombre d'anomalies\" et \"Pourcentage d'outliers\".\n",
     "\n",
     "\n",
-    "- `errors_count = df_resultat.groupby('match_id')['error'].sum()` : Calcule le nombre d'erreur pour chaque \"match_id\".\n",
-    "- `errors_percentage = (errors_count / total_rows_per_match_id) * 100` : Calcule le pourcentage d'erreurs pour chaque \"match_id\".\n",
-    "- `errors_df = pd.DataFrame({'Match_id': errors_count.index, 'Nombre d\\'erreurs': errors_count, 'Pourcentage d\\'erreurs': errors_percentage})` : Crée un DataFrame appelé `errors_df` pour stocker les résultats des erreurs, contenant les colonnes \"Match_id\", \"Nombre d'erreurs\" et \"Pourcentage d'erreurs\".\n",
+    "- `errors_count` : Calcule le nombre d'erreur pour chaque \"match_id\".\n",
+    "- `errors_percentage` : Calcule le pourcentage d'erreurs pour chaque \"match_id\".\n",
+    "- `errors_df` : Crée un DataFrame appelé `errors_df` pour stocker les résultats des erreurs, contenant les colonnes \"Match_id\", \"Nombre d'erreurs\" et \"Pourcentage d'erreurs\".\n",
     "\n",
-    "- `total_rows_per_match_id = df_resultat.groupby('match_id').size()` : Calcule le nombre total de lignes pour chaque \"match_id\" en utilisant la fonction `size()`.\n",
-    "- `total_points = df_resultat.groupby(['match_id', 'judge_id'])[['red_point', 'blue_point']].sum()` : Calcule le nombre total de points attribués par chaque \"judge_id\" dans chaque \"match_id\".\n",
+    "- `total_rows_per_match_id` : Calcule le nombre total de lignes pour chaque \"match_id\" en utilisant la fonction `size()`.\n",
+    "- `total_points` : Calcule le nombre total de points attribués par chaque \"judge_id\" dans chaque \"match_id\".\n",
     "\n",
     "\n",
-    "Ce code permet d'analyser les données du fichier \"resultat_final.csv\", de calculer des statistiques sur les outliers, les erreurs, les points attribués et les résultats d'échanges pour chaque \"match_id\", et d'exporter les résultats dans des fichiers Excel distincts.\n"
+    "Ce code permet d'analyser les données du fichier \"resultat_final.csv\", de calculer des statistiques sur les outliers, les erreurs, les points attribués et les résultats d'échanges pour chaque \"match_id\", et d'exporter les résultats dans des fichiers Excel distincts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "d2c4546b",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_4748\\2420088018.py:2: DtypeWarning: Columns (38,40,43,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Ray\\AppData\\Local\\Temp\\ipykernel_12092\\2420088018.py:2: DtypeWarning: Columns (38,40,43,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_resultat = pd.read_csv('LCBA_resultat.csv')\n"
      ]
     },
@@ -1374,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "810bca4b",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "5676c370",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "87ccf825",
    "metadata": {
     "scrolled": true
