--- a/LCBA.ipynb
+++ b/LCBA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279f31e4",
+   "id": "4591b499",
    "metadata": {},
    "source": [
     "# Business understanding"
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af6b238",
+   "id": "7ee71984",
    "metadata": {},
    "source": [
-    "Le contexte de ce notebook porte sur le sport de combat du light-contact boxing et plus précisément plus l’application mise à disposition à la fédération suisse de boxe light-contact (LCBA). Il traite la manière dans laquelle les juges sont chargés d'attribuer des points en fonction de leur appréciation des échanges portés par les boxeurs. Il est constaté que les juges peuvent avoir des différences d’attribution de points importantes, et pourtant ils se basent sur les mêmes règles et critères. Cette situation permet de constater les erreurs de jugement et donne une impression d'injustice pour les boxeurs, ce qui peut nuire au fair-play dans le sport.\n",
+    "Le contexte de ce notebook porte sur le sport de combat du light-contact boxing et plus précisément sur l’application mise à disposition à la fédération suisse de boxe light-contact (LCBA). Il traite la manière sur laquelle les juges sont chargés d'attribuer des points en fonction de leur appréciation des échanges portés par les boxeurs. Il est constaté que les juges peuvent avoir des différences d’attribution de points importantes, et pourtant ils se basent sur les mêmes règles et critères. Cette situation permet de constater les erreurs de jugement et donne une impression d'injustice pour les boxeurs, ce qui peut nuire au fair-play dans le sport.\n",
     "\n",
     "Pour remédier à cette situation, ce notebook propose l'utilisation de techniques d'analyse des données en utilisant des algorithmes appuyés de méthodes statistiques pour faciliter la détection des écarts de pointage en temps réel. Le résultat permettrait d’améliorer le jugement d’un match, et peut-être identifier les critères pour lesquels ils ont tendance à diverger dans leur jugement. Pour les juges, cela permettra d’améliorer leur compréhension des règles et des critères de jugement, ce qui aura un impact positif sur la qualité du jugement et le fair-play dans le sport de combat. Un document expliquant les enjeux et la réalisation de ce projet de recherche a été rédigé."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1265e502",
+   "id": "7ad55893",
    "metadata": {},
    "source": [
     "# Data exploration"
@@ -1251,22 +1251,22 @@
    "source": [
     "# Evaluation\n",
     "\n",
-    "Cette phase d'itération dans la réalisation du projet a permis d'évaluer les résultats obtenus, de les analyser et de les comparer aux objectifs initiaux. Elle offre l'opportunité de faire des ajustements, des améliorations et des corrections en fonction des constatations faites. L'itération a impliquer la révision et la modification de l'algorithme pour ajuster et améliorer les résultats obtenus."
+    "Cette phase d'itération dans la réalisation du projet a permis d'évaluer les résultats obtenus, de les analyser et de les comparer aux objectifs initiaux. Elle offre l'opportunité de faire des ajustements, des améliorations et des corrections en fonction des constatations faites. L'itération a impliqué la révision et la modification de l'algorithme pour ajuster et améliorer les résultats obtenus."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4f933f04",
+   "id": "432a9161",
    "metadata": {},
    "source": [
     "# Deployment\n",
     "\n",
-    "Cette phase d'export des résultats obtenus est la fin du projet de recherche ou d'analyse. Elle présente le résultat, les conclusions et les découvertest. Cela contribue à la valorisation du travail réalisé et permet à d'autres personnes de bénéficier du résultat des recherches effectuées."
+    "Cette phase d'export des résultats obtenus est la fin du projet de recherche ou d'analyse. Elle présente le résultat, les conclusions et les découvertes. Cela contribue à la valorisation du travail réalisé et permet à d'autres personnes de bénéficier du résultat des recherches effectuées."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "416f34cf",
+   "id": "1bae8640",
    "metadata": {},
    "source": [
     "Ce code compare les \"score_id\" entre deux fichiers CSV et ajoute les lignes correspondantes manquantes. Le DataFrame mis à jour est ensuite exporté dans un nouveau fichier CSV appelé \"resultat_final.csv\". Cette phase est pour récupérer toutes les lignes supprimées."
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f2a8d3ec",
+   "id": "35b55cb6",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99438755",
+   "id": "7068f780",
    "metadata": {},
    "source": [
     "Ce code caclul les éléments suivants :\n",
